--- a/1_6_2_Text_Summarization_Evaluate.ipynb
+++ b/1_6_2_Text_Summarization_Evaluate.ipynb
@@ -6,22 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import torch\n",
-    "import torch.nn.functional as F\n",
-    "from torch.utils.data import Dataset, DataLoader, RandomSampler, SequentialSampler\n",
     "import os\n",
     "\n",
     "from datasets import load_dataset, load_metric\n",
     "\n",
     "from bert_score import BERTScorer\n",
     "from rouge import Rouge\n",
-    "\n",
-    "import difflib\n",
-    "import nltk\n",
-    "import re\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -320,10 +312,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Full Text</th>\n",
+       "      <th>Generated Text</th>\n",
+       "      <th>Actual Text</th>\n",
+       "      <th>Finetune</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Rouge-1</th>\n",
+       "      <th>Rouge-2</th>\n",
+       "      <th>Rouge-l</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Peugeot deal boosts Mitsubishi Struggling Japa...</td>\n",
+       "      <td>Japanese car maker Mitsubishi Motors has struc...</td>\n",
+       "      <td>Struggling Japanese car maker Mitsubishi Motor...</td>\n",
+       "      <td>business</td>\n",
+       "      <td>business</td>\n",
+       "      <td>0.638037</td>\n",
+       "      <td>0.567568</td>\n",
+       "      <td>0.638037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Japan bank shares up on link talk Shares of Su...</td>\n",
+       "      <td>SMFG shares climbed by 2.7% to 717,000, and Da...</td>\n",
+       "      <td>Shares of Sumitomo Mitsui Financial (SMFG), an...</td>\n",
+       "      <td>business</td>\n",
+       "      <td>business</td>\n",
+       "      <td>0.608108</td>\n",
+       "      <td>0.438202</td>\n",
+       "      <td>0.594595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ebbers 'aware' of WorldCom fraud Former WorldC...</td>\n",
+       "      <td>Mr Ebbers has denied all the charges, saying h...</td>\n",
+       "      <td>Mr Sullivan is at the centre of the government...</td>\n",
+       "      <td>business</td>\n",
+       "      <td>business</td>\n",
+       "      <td>0.589041</td>\n",
+       "      <td>0.510000</td>\n",
+       "      <td>0.575342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Barclays shares up on merger talk Shares in UK...</td>\n",
+       "      <td>Shares in UK banking group Barclays have risen...</td>\n",
+       "      <td>Shares in UK banking group Barclays have risen...</td>\n",
+       "      <td>business</td>\n",
+       "      <td>business</td>\n",
+       "      <td>0.715152</td>\n",
+       "      <td>0.691244</td>\n",
+       "      <td>0.715152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>French boss to leave EADS The French co-head o...</td>\n",
+       "      <td>The company should now be able put this disput...</td>\n",
+       "      <td>The company should now be able put this disput...</td>\n",
+       "      <td>business</td>\n",
+       "      <td>business</td>\n",
+       "      <td>0.907895</td>\n",
+       "      <td>0.874419</td>\n",
+       "      <td>0.907895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1687</th>\n",
+       "      <td>Fast lifts rise into record books Two high-spe...</td>\n",
+       "      <td>The first record for the world's fastest passe...</td>\n",
+       "      <td>The lifts take only 30 seconds to whisk passen...</td>\n",
+       "      <td>tech</td>\n",
+       "      <td>tech</td>\n",
+       "      <td>0.419162</td>\n",
+       "      <td>0.344828</td>\n",
+       "      <td>0.407186</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1688</th>\n",
+       "      <td>Apple attacked over sources row Civil libertie...</td>\n",
+       "      <td>The EFF, representing the reporters, has asked...</td>\n",
+       "      <td>The EFF, representing the reporters, has asked...</td>\n",
+       "      <td>tech</td>\n",
+       "      <td>tech</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1689</th>\n",
+       "      <td>Joke e-mail virus tricks users A virus that di...</td>\n",
+       "      <td>: Anti-virus firms are issuing high-level warn...</td>\n",
+       "      <td>Security firm Network Box said that it stopped...</td>\n",
+       "      <td>tech</td>\n",
+       "      <td>tech</td>\n",
+       "      <td>0.695187</td>\n",
+       "      <td>0.578313</td>\n",
+       "      <td>0.684492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1690</th>\n",
+       "      <td>Norway upholds 'Napster' ruling A Norwegian st...</td>\n",
+       "      <td>Frank Allan Bruvik was ordered to pay 100,000 ...</td>\n",
+       "      <td>Frank Allan Bruvik was ordered to pay 100,000 ...</td>\n",
+       "      <td>tech</td>\n",
+       "      <td>tech</td>\n",
+       "      <td>0.744444</td>\n",
+       "      <td>0.650000</td>\n",
+       "      <td>0.744444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1691</th>\n",
+       "      <td>Virgin Radio offers 3G broadcast UK broadcaste...</td>\n",
+       "      <td>Virgin Radio offers 3G broadcast UK broadcaste...</td>\n",
+       "      <td>James Cridland, head of new media at Virgin Ra...</td>\n",
+       "      <td>tech</td>\n",
+       "      <td>tech</td>\n",
+       "      <td>0.445860</td>\n",
+       "      <td>0.346154</td>\n",
+       "      <td>0.433121</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1692 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              Full Text  \\\n",
+       "0     Peugeot deal boosts Mitsubishi Struggling Japa...   \n",
+       "1     Japan bank shares up on link talk Shares of Su...   \n",
+       "2     Ebbers 'aware' of WorldCom fraud Former WorldC...   \n",
+       "3     Barclays shares up on merger talk Shares in UK...   \n",
+       "4     French boss to leave EADS The French co-head o...   \n",
+       "...                                                 ...   \n",
+       "1687  Fast lifts rise into record books Two high-spe...   \n",
+       "1688  Apple attacked over sources row Civil libertie...   \n",
+       "1689  Joke e-mail virus tricks users A virus that di...   \n",
+       "1690  Norway upholds 'Napster' ruling A Norwegian st...   \n",
+       "1691  Virgin Radio offers 3G broadcast UK broadcaste...   \n",
+       "\n",
+       "                                         Generated Text  \\\n",
+       "0     Japanese car maker Mitsubishi Motors has struc...   \n",
+       "1     SMFG shares climbed by 2.7% to 717,000, and Da...   \n",
+       "2     Mr Ebbers has denied all the charges, saying h...   \n",
+       "3     Shares in UK banking group Barclays have risen...   \n",
+       "4     The company should now be able put this disput...   \n",
+       "...                                                 ...   \n",
+       "1687  The first record for the world's fastest passe...   \n",
+       "1688  The EFF, representing the reporters, has asked...   \n",
+       "1689  : Anti-virus firms are issuing high-level warn...   \n",
+       "1690  Frank Allan Bruvik was ordered to pay 100,000 ...   \n",
+       "1691  Virgin Radio offers 3G broadcast UK broadcaste...   \n",
+       "\n",
+       "                                            Actual Text  Finetune  Category  \\\n",
+       "0     Struggling Japanese car maker Mitsubishi Motor...  business  business   \n",
+       "1     Shares of Sumitomo Mitsui Financial (SMFG), an...  business  business   \n",
+       "2     Mr Sullivan is at the centre of the government...  business  business   \n",
+       "3     Shares in UK banking group Barclays have risen...  business  business   \n",
+       "4     The company should now be able put this disput...  business  business   \n",
+       "...                                                 ...       ...       ...   \n",
+       "1687  The lifts take only 30 seconds to whisk passen...      tech      tech   \n",
+       "1688  The EFF, representing the reporters, has asked...      tech      tech   \n",
+       "1689  Security firm Network Box said that it stopped...      tech      tech   \n",
+       "1690  Frank Allan Bruvik was ordered to pay 100,000 ...      tech      tech   \n",
+       "1691  James Cridland, head of new media at Virgin Ra...      tech      tech   \n",
+       "\n",
+       "       Rouge-1   Rouge-2   Rouge-l  \n",
+       "0     0.638037  0.567568  0.638037  \n",
+       "1     0.608108  0.438202  0.594595  \n",
+       "2     0.589041  0.510000  0.575342  \n",
+       "3     0.715152  0.691244  0.715152  \n",
+       "4     0.907895  0.874419  0.907895  \n",
+       "...        ...       ...       ...  \n",
+       "1687  0.419162  0.344828  0.407186  \n",
+       "1688  1.000000  1.000000  1.000000  \n",
+       "1689  0.695187  0.578313  0.684492  \n",
+       "1690  0.744444  0.650000  0.744444  \n",
+       "1691  0.445860  0.346154  0.433121  \n",
+       "\n",
+       "[1692 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_score.reset_index(drop=True, inplace=True)\n",
+    "total_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "total_score.to_csv(\"Results/Total_score.csv\")"
+   ]
   }
  ],
  "metadata": {
