update bert score

--- a/1_6_2_Text_Summarization_Evaluate.ipynb
+++ b/1_6_2_Text_Summarization_Evaluate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,64 +20,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_rouge(df):\n",
+    "def add_score(df):\n",
+    "    # Rouge score\n",
     "    rouge = Rouge()\n",
     "    result = rouge.get_scores(df['Generated Text'], df['Actual Text'])\n",
     "    df[\"Rouge-1\"] = [a_dict['rouge-1']['f'] for a_dict in result]\n",
     "    df[\"Rouge-2\"] = [a_dict['rouge-2']['f'] for a_dict in result]\n",
     "    df[\"Rouge-l\"] = [a_dict['rouge-l']['f'] for a_dict in result]\n",
+    "    # BERT score\n",
+    "    scorer = BERTScorer(lang=\"en\", rescale_with_baseline=True)\n",
+    "    refs = df['Actual Text'].to_list()\n",
+    "    hyps = df['Generated Text'].to_list()\n",
+    "    P, R, F1 = scorer.score(hyps, refs)\n",
+    "    df[\"BERTscore\"] = F1\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "predictions_business_business.csv\n",
-      "predictions_business_entertainment.csv\n",
-      "predictions_business_Mixed.csv\n",
-      "predictions_business_politics.csv\n",
-      "predictions_business_sport.csv\n",
-      "predictions_business_tech.csv\n",
-      "predictions_entertainment_business.csv\n",
-      "predictions_entertainment_entertainment.csv\n",
-      "predictions_entertainment_Mixed.csv\n",
-      "predictions_entertainment_politics.csv\n",
-      "predictions_entertainment_sport.csv\n",
-      "predictions_entertainment_tech.csv\n",
-      "predictions_Mixed_business.csv\n",
-      "predictions_Mixed_entertainment.csv\n",
-      "predictions_Mixed_Mixed.csv\n",
-      "predictions_Mixed_politics.csv\n",
-      "predictions_Mixed_sport.csv\n",
-      "predictions_Mixed_tech.csv\n",
-      "predictions_politics_business.csv\n",
-      "predictions_politics_entertainment.csv\n",
-      "predictions_politics_Mixed.csv\n",
-      "predictions_politics_politics.csv\n",
-      "predictions_politics_sport.csv\n",
-      "predictions_politics_tech.csv\n",
-      "predictions_sport_business.csv\n",
-      "predictions_sport_entertainment.csv\n",
-      "predictions_sport_Mixed.csv\n",
-      "predictions_sport_politics.csv\n",
-      "predictions_sport_sport.csv\n",
-      "predictions_sport_tech.csv\n",
-      "predictions_tech_business.csv\n",
-      "predictions_tech_entertainment.csv\n",
-      "predictions_tech_Mixed.csv\n",
-      "predictions_tech_politics.csv\n",
-      "predictions_tech_sport.csv\n",
-      "predictions_tech_tech.csv\n"
+      "0 predictions_business_business.csv\n",
+      "1 predictions_business_entertainment.csv\n",
+      "2 predictions_business_Mixed.csv\n",
+      "3 predictions_business_politics.csv\n",
+      "4 predictions_business_sport.csv\n",
+      "5 predictions_business_tech.csv\n",
+      "6 predictions_entertainment_business.csv\n",
+      "7 predictions_entertainment_entertainment.csv\n",
+      "8 predictions_entertainment_Mixed.csv\n",
+      "9 predictions_entertainment_politics.csv\n",
+      "10 predictions_entertainment_sport.csv\n",
+      "11 predictions_entertainment_tech.csv\n",
+      "12 predictions_Mixed_business.csv\n",
+      "13 predictions_Mixed_entertainment.csv\n",
+      "14 predictions_Mixed_Mixed.csv\n",
+      "15 predictions_Mixed_politics.csv\n",
+      "16 predictions_Mixed_sport.csv\n",
+      "17 predictions_Mixed_tech.csv\n",
+      "18 predictions_politics_business.csv\n",
+      "19 predictions_politics_entertainment.csv\n",
+      "20 predictions_politics_Mixed.csv\n",
+      "21 predictions_politics_politics.csv\n",
+      "22 predictions_politics_sport.csv\n",
+      "23 predictions_politics_tech.csv\n",
+      "24 predictions_sport_business.csv\n",
+      "25 predictions_sport_entertainment.csv\n",
+      "26 predictions_sport_Mixed.csv\n",
+      "27 predictions_sport_politics.csv\n",
+      "28 predictions_sport_sport.csv\n",
+      "29 predictions_sport_tech.csv\n",
+      "30 predictions_tech_business.csv\n",
+      "31 predictions_tech_entertainment.csv\n",
+      "32 predictions_tech_Mixed.csv\n",
+      "33 predictions_tech_politics.csv\n",
+      "34 predictions_tech_sport.csv\n",
+      "35 predictions_tech_tech.csv\n"
      ]
     },
     {
@@ -109,6 +116,7 @@
        "      <th>Rouge-1</th>\n",
        "      <th>Rouge-2</th>\n",
        "      <th>Rouge-l</th>\n",
+       "      <th>BERTscore</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -122,6 +130,7 @@
        "      <td>0.638037</td>\n",
        "      <td>0.567568</td>\n",
        "      <td>0.638037</td>\n",
+       "      <td>0.573879</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -133,6 +142,7 @@
        "      <td>0.608108</td>\n",
        "      <td>0.438202</td>\n",
        "      <td>0.594595</td>\n",
+       "      <td>0.511145</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -144,6 +154,7 @@
        "      <td>0.589041</td>\n",
        "      <td>0.510000</td>\n",
        "      <td>0.575342</td>\n",
+       "      <td>0.498677</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -155,6 +166,7 @@
        "      <td>0.715152</td>\n",
        "      <td>0.691244</td>\n",
        "      <td>0.715152</td>\n",
+       "      <td>0.632184</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -166,9 +178,11 @@
        "      <td>0.907895</td>\n",
        "      <td>0.874419</td>\n",
        "      <td>0.907895</td>\n",
+       "      <td>0.796049</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -188,6 +202,7 @@
        "      <td>0.419162</td>\n",
        "      <td>0.344828</td>\n",
        "      <td>0.407186</td>\n",
+       "      <td>0.418460</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43</th>\n",
@@ -196,6 +211,7 @@
        "      <td>The EFF, representing the reporters, has asked...</td>\n",
        "      <td>tech</td>\n",
        "      <td>tech</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -210,6 +226,7 @@
        "      <td>0.695187</td>\n",
        "      <td>0.578313</td>\n",
        "      <td>0.684492</td>\n",
+       "      <td>0.532907</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>45</th>\n",
@@ -221,6 +238,7 @@
        "      <td>0.744444</td>\n",
        "      <td>0.650000</td>\n",
        "      <td>0.744444</td>\n",
+       "      <td>0.687507</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46</th>\n",
@@ -232,10 +250,11 @@
        "      <td>0.445860</td>\n",
        "      <td>0.346154</td>\n",
        "      <td>0.433121</td>\n",
+       "      <td>0.421695</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1692 rows × 8 columns</p>\n",
+       "<p>1692 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -278,23 +297,23 @@
        "45  Frank Allan Bruvik was ordered to pay 100,000 ...      tech      tech   \n",
        "46  James Cridland, head of new media at Virgin Ra...      tech      tech   \n",
        "\n",
-       "     Rouge-1   Rouge-2   Rouge-l  \n",
-       "0   0.638037  0.567568  0.638037  \n",
-       "1   0.608108  0.438202  0.594595  \n",
-       "2   0.589041  0.510000  0.575342  \n",
-       "3   0.715152  0.691244  0.715152  \n",
-       "4   0.907895  0.874419  0.907895  \n",
-       "..       ...       ...       ...  \n",
-       "42  0.419162  0.344828  0.407186  \n",
-       "43  1.000000  1.000000  1.000000  \n",
-       "44  0.695187  0.578313  0.684492  \n",
-       "45  0.744444  0.650000  0.744444  \n",
-       "46  0.445860  0.346154  0.433121  \n",
+       "     Rouge-1   Rouge-2   Rouge-l  BERTscore  \n",
+       "0   0.638037  0.567568  0.638037   0.573879  \n",
+       "1   0.608108  0.438202  0.594595   0.511145  \n",
+       "2   0.589041  0.510000  0.575342   0.498677  \n",
+       "3   0.715152  0.691244  0.715152   0.632184  \n",
+       "4   0.907895  0.874419  0.907895   0.796049  \n",
+       "..       ...       ...       ...        ...  \n",
+       "42  0.419162  0.344828  0.407186   0.418460  \n",
+       "43  1.000000  1.000000  1.000000   1.000000  \n",
+       "44  0.695187  0.578313  0.684492   0.532907  \n",
+       "45  0.744444  0.650000  0.744444   0.687507  \n",
+       "46  0.445860  0.346154  0.433121   0.421695  \n",
        "\n",
-       "[1692 rows x 8 columns]"
+       "[1692 rows x 9 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,17 +321,33 @@
    "source": [
     "path = 'output'\n",
     "total_score = pd.DataFrame()\n",
-    "for file in os.listdir(path):\n",
+    "for _, file in enumerate(os.listdir(path)):\n",
     "    df = pd.read_csv(path+\"/\"+file)\n",
-    "    df = add_rouge(df)\n",
+    "    df = add_score(df)\n",
     "    total_score = pd.concat([total_score, df])\n",
-    "    print(file)\n",
-    "total_score"
+    "    print(_, file)\n",
+    "total_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# path = 'output'\n",
+    "# total_score = pd.DataFrame()\n",
+    "# for file in os.listdir(path):\n",
+    "#     df = pd.read_csv(path+\"/\"+file)\n",
+    "#     df = add_rouge(df)\n",
+    "#     total_score = pd.concat([total_score, df])\n",
+    "#     print(file)\n",
+    "# total_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -344,6 +379,7 @@
        "      <th>Rouge-1</th>\n",
        "      <th>Rouge-2</th>\n",
        "      <th>Rouge-l</th>\n",
+       "      <th>BERTscore</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -357,6 +393,7 @@
        "      <td>0.638037</td>\n",
        "      <td>0.567568</td>\n",
        "      <td>0.638037</td>\n",
+       "      <td>0.573879</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -368,6 +405,7 @@
        "      <td>0.608108</td>\n",
        "      <td>0.438202</td>\n",
        "      <td>0.594595</td>\n",
+       "      <td>0.511145</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -379,6 +417,7 @@
        "      <td>0.589041</td>\n",
        "      <td>0.510000</td>\n",
        "      <td>0.575342</td>\n",
+       "      <td>0.498677</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -390,6 +429,7 @@
        "      <td>0.715152</td>\n",
        "      <td>0.691244</td>\n",
        "      <td>0.715152</td>\n",
+       "      <td>0.632184</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -401,9 +441,11 @@
        "      <td>0.907895</td>\n",
        "      <td>0.874419</td>\n",
        "      <td>0.907895</td>\n",
+       "      <td>0.796049</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -423,6 +465,7 @@
        "      <td>0.419162</td>\n",
        "      <td>0.344828</td>\n",
        "      <td>0.407186</td>\n",
+       "      <td>0.418460</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1688</th>\n",
@@ -431,6 +474,7 @@
        "      <td>The EFF, representing the reporters, has asked...</td>\n",
        "      <td>tech</td>\n",
        "      <td>tech</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -445,6 +489,7 @@
        "      <td>0.695187</td>\n",
        "      <td>0.578313</td>\n",
        "      <td>0.684492</td>\n",
+       "      <td>0.532907</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1690</th>\n",
@@ -456,6 +501,7 @@
        "      <td>0.744444</td>\n",
        "      <td>0.650000</td>\n",
        "      <td>0.744444</td>\n",
+       "      <td>0.687507</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1691</th>\n",
@@ -467,10 +513,11 @@
        "      <td>0.445860</td>\n",
        "      <td>0.346154</td>\n",
        "      <td>0.433121</td>\n",
+       "      <td>0.421695</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1692 rows × 8 columns</p>\n",
+       "<p>1692 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -513,23 +560,23 @@
        "1690  Frank Allan Bruvik was ordered to pay 100,000 ...      tech      tech   \n",
        "1691  James Cridland, head of new media at Virgin Ra...      tech      tech   \n",
        "\n",
-       "       Rouge-1   Rouge-2   Rouge-l  \n",
-       "0     0.638037  0.567568  0.638037  \n",
-       "1     0.608108  0.438202  0.594595  \n",
-       "2     0.589041  0.510000  0.575342  \n",
-       "3     0.715152  0.691244  0.715152  \n",
-       "4     0.907895  0.874419  0.907895  \n",
-       "...        ...       ...       ...  \n",
-       "1687  0.419162  0.344828  0.407186  \n",
-       "1688  1.000000  1.000000  1.000000  \n",
-       "1689  0.695187  0.578313  0.684492  \n",
-       "1690  0.744444  0.650000  0.744444  \n",
-       "1691  0.445860  0.346154  0.433121  \n",
+       "       Rouge-1   Rouge-2   Rouge-l  BERTscore  \n",
+       "0     0.638037  0.567568  0.638037   0.573879  \n",
+       "1     0.608108  0.438202  0.594595   0.511145  \n",
+       "2     0.589041  0.510000  0.575342   0.498677  \n",
+       "3     0.715152  0.691244  0.715152   0.632184  \n",
+       "4     0.907895  0.874419  0.907895   0.796049  \n",
+       "...        ...       ...       ...        ...  \n",
+       "1687  0.419162  0.344828  0.407186   0.418460  \n",
+       "1688  1.000000  1.000000  1.000000   1.000000  \n",
+       "1689  0.695187  0.578313  0.684492   0.532907  \n",
+       "1690  0.744444  0.650000  0.744444   0.687507  \n",
+       "1691  0.445860  0.346154  0.433121   0.421695  \n",
        "\n",
-       "[1692 rows x 8 columns]"
+       "[1692 rows x 9 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,12 +588,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "total_score.to_csv(\"Results/Total_score.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
